--- a/frontend/css/index.scss
+++ b/frontend/css/index.scss
@@ -1,8 +1,168 @@
-//Whole setting
 body {
     margin: 0;
     background-color: #F7F7F7;
 }
+
+@media (max-width: 600px) {
+  .tracker_whole_box {
+    padding: 0% 15% 10% 15%;
+    .tracker_header_h1 {
+        font-size: 30px;
+        margin: 10% 0%;
+    }
+}
+.create_account{
+  align-items: center;
+  .create_account_p {
+      margin: 0% 2% 0% 0%;
+  }
+      .create_account_input{
+          width: 100%;
+          padding: 0.5% 1%;
+          margin-right: 2%;
+          border: 1px solid #000000;
+      }
+  .create_account_btn{
+      background-color: #000000;
+      color: #F7F7F7;
+      padding: 0.5% 1%;
+      margin: 10% 0%;
+  }
+}
+label {
+  display: block;
+}
+input[type="radio"] {
+  appearance: none;
+  display: none;
+  opacity: 0;
+  width: 1px;
+  position: absolute;
+  height: 1px;
+}
+input[type="radio"] + span {
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  cursor: pointer;
+  padding: 10px 11px 8px 36px;
+  border-radius: 4px;
+  font-weight: 500;
+  font-size: 14px;
+}
+input[type="radio"] + span::before,
+input[type="radio"] + span::after {
+  position: absolute;
+  content: "";
+  display: block;
+  border-radius: 50%;
+  top: 0;
+  bottom: 0;
+  margin: auto 10px auto 0;
+  box-sizing: border-box;
+}
+input[type="radio"] + span::before {
+  width: 20px;
+  height: 20px;
+  background: #fff;
+  border: 2px solid #999999;
+  left: 9px;
+}
+input[type="radio"] + span::after {
+  width: 10px;
+  height: 10px;
+  background: #999999;
+  left: 14px;
+  opacity: 0;
+}
+input[type="radio"]:checked + span::before {
+  border: 2px solid #0070bd;
+}
+input[type="radio"]:checked + span::after {
+  background: #0070bd;
+  opacity: 1;
+}
+
+//Select box setting
+
+.account_select_box, .category_select, .filter_account {
+align-items: center;
+margin-bottom: 2%;
+.account_select_p , .category_select_p, .filter_account_p{
+margin: 0% 1% 0% 0%;
+}
+.select_account, .select_category, .select_filter {
+border: 1px solid #000000;
+color: #000000;
+width: 70%;
+padding: 0.5% 1%;
+margin: 5% 0%;
+}
+}
+
+.category_box {
+  margin-bottom: 2%;
+  .create_category {
+    align-items: center;
+    .create_category_input{
+            width: 40%;
+            padding: 0.5% 2%;
+            margin-right: 2%;
+            border: 1px solid #000000;
+    }
+    .create_category_btn {
+        background-color: #000000;
+        color: #F7F7F7;
+        padding: 0.5% 1%;
+    }
+  }
+}
+.create_category_input{
+  width: 20%;
+  padding: 0.5% 1%;
+  margin-right: 2%;
+  border: 1px solid #000000;
+}
+.create_category_btn{
+  background-color: #000000;
+  color: #F7F7F7;
+  padding: 0.5% 1%;
+}
+
+.description_box , .amount_box {
+  align-items: center;
+  margin-bottom: 2%;
+  p {
+    margin: 0%;
+  }
+  .description_input, .amount_input {
+    margin-left: 2%;
+    border: 1px solid #000000;
+    padding: 0.5% 2%;;
+  }
+}
+
+.transaction_btn {
+  background-color: #000000;
+  color: #F7F7F7;
+  padding: 0.5% 1%;
+  margin-bottom: 2%;
+}
+
+.transaction_table {
+  width: 100%;
+  border-collapse:  collapse;
+  tr:nth-child(odd) {
+    background-color:  #ddd;
+  }
+  th, td{
+    padding: 0.5% 0% 0.5% 2%;
+    width: 12.5%;
+  }
+}
+}
+
+@media (min-width: 601px) {
 
 .tracker_whole_box {
     margin: 0% 10% 10% 10%;
@@ -182,4 +342,6 @@ select {
     padding: 0.5% 0% 0.5% 2%;
     width: 12.5%;
   }
+}
+
 }
