Added some style changes

--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -6,6 +6,7 @@ body {
 @media (max-width: 600px) {
   .tracker_whole_box {
     padding: 0% 15% 10% 15%;
+    font-size: 24px;
   }
   .tracker_whole_box .tracker_header_h1 {
     font-size: 30px;
@@ -14,8 +15,9 @@ body {
   .create_account {
     align-items: center;
   }
-  .create_account .create_account_p {
+  .create_account .create_account_h2 {
     margin: 0% 2% 0% 0%;
+    font-size: 26px;
   }
   .create_account .create_account_input {
     width: 100%;
@@ -28,6 +30,9 @@ body {
     color: #F7F7F7;
     padding: 0.5% 1%;
     margin: 10% 0%;
+  }
+  .transaction_h2 {
+    font-size: 26px;
   }
   label {
     display: block;
@@ -88,8 +93,9 @@ input[type=radio] + span::after {
     align-items: center;
     margin-bottom: 2%;
   }
-  .account_select_box .account_select_p, .account_select_box .category_select_p, .account_select_box .filter_account_p, .category_select .account_select_p, .category_select .category_select_p, .category_select .filter_account_p, .filter_account .account_select_p, .filter_account .category_select_p, .filter_account .filter_account_p {
+  .account_select_box .account_select_h2, .account_select_box .category_select_h2, .account_select_box .filter_account_h2, .category_select .account_select_h2, .category_select .category_select_h2, .category_select .filter_account_h2, .filter_account .account_select_h2, .filter_account .category_select_h2, .filter_account .filter_account_h2 {
     margin: 0% 1% 0% 0%;
+    font-size: 26px;
   }
   .account_select_box .select_account, .account_select_box .select_category, .account_select_box .select_filter, .category_select .select_account, .category_select .select_category, .category_select .select_filter, .filter_account .select_account, .filter_account .select_category, .filter_account .select_filter {
     border: 1px solid #000000;
@@ -130,8 +136,8 @@ input[type=radio] + span::after {
     align-items: center;
     margin-bottom: 2%;
   }
-  .description_box p, .amount_box p {
-    margin: 0%;
+  .description_box .description_h2, .description_box .amount_h2, .amount_box .description_h2, .amount_box .amount_h2 {
+    font-size: 26px;
   }
   .description_box .description_input, .description_box .amount_input, .amount_box .description_input, .amount_box .amount_input {
     margin-left: 2%;
