--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -5,7 +5,7 @@ body {
 
 @media (max-width: 600px) {
   .tracker_whole_box {
-    padding: 0% 15% 10% 15%;
+    padding: 0% 10% 10% 10%;
     font-size: 24px;
   }
   .tracker_whole_box .tracker_header_h1 {
@@ -122,7 +122,7 @@ input[type=radio] + span::after {
     padding: 0.5% 1%;
   }
   .create_category_input {
-    width: 20%;
+    width: 70%;
     padding: 0.5% 1%;
     margin-right: 2%;
     border: 1px solid #000000;
@@ -131,6 +131,7 @@ input[type=radio] + span::after {
     background-color: #000000;
     color: #F7F7F7;
     padding: 0.5% 1%;
+    margin: 10% 0% 3% 0%;
   }
   .description_box, .amount_box {
     align-items: center;
@@ -143,12 +144,13 @@ input[type=radio] + span::after {
     margin-left: 2%;
     border: 1px solid #000000;
     padding: 0.5% 2%;
+    width: 65%;
   }
   .transaction_btn {
     background-color: #000000;
     color: #F7F7F7;
     padding: 0.5% 1%;
-    margin-bottom: 2%;
+    margin: 10% 0% 5% 0%;
   }
   .transaction_table {
     width: 100%;
