--- a/frontend/css/index.scss
+++ b/frontend/css/index.scss
@@ -5,7 +5,7 @@ body {
 
 @media (max-width: 600px) {
   .tracker_whole_box {
-    padding: 0% 15% 10% 15%;
+    padding: 0% 10% 10% 10%;
     font-size: 24px;
     .tracker_header_h1 {
         font-size: 30px;
@@ -126,7 +126,7 @@ margin: 5% 0%;
   }
 }
 .create_category_input{
-  width: 20%;
+  width: 70%;
   padding: 0.5% 1%;
   margin-right: 2%;
   border: 1px solid #000000;
@@ -135,6 +135,7 @@ margin: 5% 0%;
   background-color: #000000;
   color: #F7F7F7;
   padding: 0.5% 1%;
+  margin: 10% 0% 3% 0%;
 }
 
 .description_box , .amount_box {
@@ -147,6 +148,7 @@ margin: 5% 0%;
     margin-left: 2%;
     border: 1px solid #000000;
     padding: 0.5% 2%;;
+    width: 65%;
   }
 }
 
@@ -154,7 +156,7 @@ margin: 5% 0%;
   background-color: #000000;
   color: #F7F7F7;
   padding: 0.5% 1%;
-  margin-bottom: 2%;
+  margin: 10% 0% 5% 0%;
 }
 
 .transaction_table {
